Fixed svg images not showing issue, need to do gulp sass

--- a/app/styles/_global.scss
+++ b/app/styles/_global.scss
@@ -147,37 +147,37 @@ body#viewer {
 
   // iDEA Badge Logo
   & #idea-badge {
-    @include backgroundSizes($png_badge_width, $png_badge_height, $png_badge, 2);
+    @include backgroundSizesSVG($badge_width, $badge_height, $svg_badge, 2);
   }
 
   &.green #idea-badge {
-    @include backgroundSizes($png_badge_width, $png_badge_height, $png_badge_green, 2);
+    @include backgroundSizesSVG($badge_width, $badge_height, $svg_badge_green, 2);
   }
 
   &.blue #idea-badge {
-  	@include backgroundSizes($png_badge_width, $png_badge_height, $png_badge_blue, 2);
+  	@include backgroundSizesSVG($badge_width, $badge_height, $svg_badge_blue, 2);
   }
 
   &.pink #idea-badge {
-  	@include backgroundSizes($png_badge_width, $png_badge_height, $png_badge_pink, 2);
+  	@include backgroundSizesSVG($badge_width, $badge_height, $svg_badge_pink, 2);
   }
 
   &.orange #idea-badge {
-  	@include backgroundSizes($png_badge_width, $png_badge_height, $png_badge_orange, 2);
+  	@include backgroundSizesSVG($badge_width, $badge_height, $svg_badge_orange, 2);
   }
 
   // viewer body children
   #idea-badge{
     position: absolute;
-		right: $png_badge_width/4;
+		right: $badge_width/4;
 		top: $gap*2;
 	}
 
   #title {
     position: absolute;
     top: 0;
-    left: $png_garter_width;
-    height: $png_garter_height;
+    left: $garter_width;
+    height: $garter_height;
     display: table;
     padding: $gap;
     box-sizing: border-box;
@@ -190,7 +190,7 @@ body#viewer {
   }
 
   #garter {
-    @include backgroundSizes($png_garter_width, $png_garter_height, $png_garter, 3);
+    @include backgroundSizesSVG($garter_width, $garter_height, $svg_garter, 3);
     // @include backgroundX($png_garter);
     // background-size: $png_garter_width $png_garter_height;
     //
@@ -226,7 +226,7 @@ body#viewer {
   }
 
   #components {
-    padding-top: $png_garter_height + $gap;
+    padding-top: $garter_height + $gap;
 		// padding-bottom: $footer_height + $gap;
 		text-align: center;
 	}
