--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -5,6 +5,7 @@
 	}
 }
 
+//PNG
 // background-image url for standard defination, Retina (@2x), and Retina HD (@3x) background images
 @mixin backgroundX($imageFile, $resolution:1, $bgColor:"", $imageFormat:"png", $repeat:"no-repeat", $posX:"0px", $posY:"0px") {
 	@if $resolution != 1 {
@@ -31,6 +32,38 @@
 	@if $maxResolutions > 2 {
 		@include media-3x() {
 			@include backgroundX($imageFile, 3, $bgColor, $imageFormat, $repeat, $posX, $posY);
+			background-size: $imageWidth $imageHeight;
+		}
+	}
+}
+
+//SVG
+// background-image url for standard defination, Retina (@2x), and Retina HD (@3x) background images
+@mixin backgroundXSVG($imageFile, $resolution:1, $bgColor:"", $imageFormat:"svg", $repeat:"no-repeat", $posX:"0px", $posY:"0px") {
+	@if $resolution != 1 {
+		background: #{$bgColor} url("#{$imageFile}@#{$resolution}x.#{$imageFormat}") #{$repeat} #{$posX} #{$posY};
+	} @else {
+		background: #{$bgColor} url("#{$imageFile}.#{$imageFormat}") #{$repeat} #{$posX} #{$posY};
+	}
+}
+
+// generates media queries for up to @3x image resolutions
+@mixin backgroundSizesSVG($imageWidth, $imageHeight, $imageFile, $maxResolutions:1, $bgColor:"", $imageFormat:"svg", $repeat:"no-repeat", $posX:"0px", $posY:"0px") {
+	width: $imageWidth;
+	height: $imageHeight;
+	@include backgroundXSVG($imageFile);
+	background-size: $imageWidth $imageHeight;
+	// @2x
+	@if $maxResolutions > 1 {
+		@include media-2x() {
+			@include backgroundXSVG($imageFile, 2, $bgColor, $imageFormat, $repeat, $posX, $posY);
+			background-size: $imageWidth $imageHeight;
+		}
+	}
+	// @3x
+	@if $maxResolutions > 2 {
+		@include media-3x() {
+			@include backgroundXSVG($imageFile, 3, $bgColor, $imageFormat, $repeat, $posX, $posY);
 			background-size: $imageWidth $imageHeight;
 		}
 	}
