--- a/app/styles/_theme.scss
+++ b/app/styles/_theme.scss
@@ -42,15 +42,23 @@ $png_footer_pink: "#{$path}idea/footer/pink";
 $png_footer_orange: "#{$path}idea/footer/orange";
 
 // iDEA Badge Logo images
-$png_badge: "#{$path}idea/logos/navy";
-$png_badge_green: "#{$path}idea/logos/green";
-$png_badge_blue: "#{$path}idea/logos/blue";
-$png_badge_pink: "#{$path}idea/logos/pink";
-$png_badge_orange: "#{$path}idea/logos/orange.svg";
-$png_badge_width: 256px;
-$png_badge_height: 256px;
+$png_badge: "#{$path}idea/logos/iDEA-navy";
+$png_badge_green: "#{$path}idea/logos/iDEA-green";
+$png_badge_blue: "#{$path}idea/logos/iDEA-blue";
+$png_badge_pink: "#{$path}idea/logos/iDEA-pink";
+$png_badge_orange: "#{$path}idea/logos/iDEA-orange";
+
+$svg_badge: "#{$path}idea/logos/navy";
+$svg_badge_green: "#{$path}idea/logos/green";
+$svg_badge_blue: "#{$path}idea/logos/blue";
+$svg_badge_pink: "#{$path}idea/logos/pink";
+$svg_badge_orange: "#{$path}idea/logos/orange";
+
+$badge_width: 256px;
+$badge_height: 256px;
 
 // Garter image
-$png_garter: "#{$path}idea/garter/garter-stamp-svg.svg";
-$png_garter_width: 128px;
-$png_garter_height: 128px;
+$png_garter: "#{$path}idea/garter/garter-stamp-png";
+$svg_garter: "#{$path}idea/garter/garter-stamp-svg";
+$garter_width: 128px;
+$garter_height: 128px;
